--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,1 +1,19 @@
-print("hello universe")
+name: run hello world
+on: push
+
+jobs: 
+  python: 
+  runs-on: windows-latest
+
+  steps:
+  - name: clone repo
+    uses: actions/checkout@v4 
+
+  - name: setup python
+    uses: actions/checkout@v4
+    with:
+    python-version: '3.10' 
+  
+
+  - name: run a py script
+    run: python hello.py
