--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,10 +6,10 @@ jobs:
     runs-on: windows-latest
 
   steps:
-  - name: clone repo
+  - name: Clone repo
     uses: actions/checkout@v4 
 
-  - name: setup python
+  - name: Setup python
     uses: actions/checkout@v4
     with:
       python-version: '3.10' 
