--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,15 +5,15 @@ jobs:
   python: 
     runs-on: windows-latest
 
-  steps:
-  - name: Clone repo
-    uses: actions/checkout@v4 
+    steps:
+      - name: Clone repo
+        uses: actions/checkout@v4 
 
-  - name: Setup python
-    uses: actions/checkout@v4
-    with:
-      python-version: '3.10' 
+      - name: Setup python
+        uses: actions/checkout@v4
+        with:
+          python-version: '3.10' 
   
 
-  - name: run a py script
-    run: python hello.py
+      - name: run a python script
+        run: python hello.py
